Fixed css priority, and added hash password tool, and prepared services folder

--- a/front-angular/src/app/footer/footer.component.html
+++ b/front-angular/src/app/footer/footer.component.html
@@ -57,6 +57,7 @@
 
         <div class="col-md-6 widget">
           <div class="widget-body">
+            <!-- TODO: INJECTER LA LIGNE DU FOOTER A PARTIR DE LA BDD -->
             <p class="text-right">
               Copyright &copy; 2014, Your name. Designed by <a href="http://gettemplate.com/" rel="designer">gettemplate</a>
             </p>
