--- a/front-angular/src/app/head/head.component.html
+++ b/front-angular/src/app/head/head.component.html
@@ -1,18 +1,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
+  <!-- TODO: INJECTER LA DESCRIPTION A PARTIR DE LA BDD -->
 	<meta name="description" content="">
-	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
+	<meta name="author"      content="Brian Van Bellinghen">
 
-	<title>Sign in - Progressus Bootstrap template</title>
-
+	<title>CMS Esport</title>
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
-
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-	<script src="assets/js/html5shiv.js"></script>
-	<script src="assets/js/respond.min.js"></script>
-	<![endif]-->
 </head>
